basic buttons and link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Tetroe
+<head>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+
+<div>
+    Tetroe
+</div>
+
+<div>
+    <center>
+        <a href="https://cardstocks.tetroe.com">
+            <div class="label">cardStocks</div>
+            <img src="./cardStocks.png" class="imge" />
+        </a>
+        <a href="https://gamsu.tetroe.com">
+            <div class="label">Gamsu</div>
+            <img src="./gamsu.png" class="imge" />
+        </a>
+    </center>
+</div>
