header and footer

--- a/index.html
+++ b/index.html
@@ -2,20 +2,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-
-<div>
+<body>
+    <div id="headerblock">
+        <div id="headertext">
+            <span class="titletext">Tetroe</span>
+            <span class="helpertext">Software and Analytical Consulting</span>
+    
+        </div>
+    </div>
+<hr>
+    <div id="content">
+        <div id="products">
+            <center>
+                <a href="https://cardstocks.tetroe.com">
+                    <img src="./cardStocks.png" class="imge" />
+                </a>
+                <a href="https://gamsu.tetroe.com">
+                    <img src="./gamsu.png" class="imge" />
+                </a>
+            </center>
+        </div>
+    </div>
+</body>
+<hr>
+<footer>
     Tetroe
-</div>
 
-<div>
-    <center>
-        <a href="https://cardstocks.tetroe.com">
-            <div class="label">cardStocks</div>
-            <img src="./cardStocks.png" class="imge" />
-        </a>
-        <a href="https://gamsu.tetroe.com">
-            <div class="label">Gamsu</div>
-            <img src="./gamsu.png" class="imge" />
-        </a>
-    </center>
-</div>
+    <a href="https://cardstocks.tetroe.com">cardStocks</a>
+    <a href="https://gamsu.tetroe.com">Gamsu</a>
+
+    <a href="mailto:support@tetroe.com">Contact Us</a>
+</footer>
