update website with basic styling

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -5,31 +6,24 @@
 <body>
     <div id="headerblock">
         <div id="headertext">
-            <span class="titletext">Tetroe</span>
-            <span class="helpertext">Software and Analytical Consulting</span>
-    
+            <span class="titletext">Tetroe</span>    
         </div>
     </div>
 <hr>
     <div id="content">
-        <div id="products">
-            <center>
-                <a href="https://cardstocks.tetroe.com">
-                    <img src="./cardStocks.png" class="imge" />
-                </a>
-                <a href="https://gamsu.tetroe.com">
-                    <img src="./gamsu.png" class="imge" />
-                </a>
-            </center>
+       <div class="products">
+            <center><a href="https://gamsu.tetroe.com" class="gamsu">Gamsu</a></center>
+            <div class="producttext">Rate gaming preferences on a 3 point scale and create yearly top 5 lists. Share and compare your profile with friends. </div>
+        </div>
+        <div class="products">
+            <center><a href="https://cardstocks.tetroe.com" class="cardstocks">cardStocks</a></center>
+            <div class="producttext">Manager your pokemon card collections with user defined rules to refine the sets to your interests.</div>
+        </div>
+        <div class="products">
+            <center><a href="https://store.tetroe.com" class="store">Store</a></center>
+            <div class="producttext">Check out our pokemon card store to purchase sealed products to fill your in your missing collections.</div>
         </div>
     </div>
 </body>
-<hr>
-<footer>
-    Tetroe
 
-    <a href="https://cardstocks.tetroe.com">cardStocks</a>
-    <a href="https://gamsu.tetroe.com">Gamsu</a>
-
-    <a href="mailto:support@tetroe.com">Contact Us</a>
-</footer>
+</html>
