add slider for each product and brief summary text

--- a/index.html
+++ b/index.html
@@ -4,26 +4,69 @@
 </head>
 
 <body>
-    <div id="headerblock">
-        <div id="headertext">
-            <span class="titletext">Tetroe</span>    
+ 
+    <div class="container">
+        <div class="item">
+            <img src="./gamsuDalle.png" class="displayimg">
+        </div>
+        <a href='https://gamsu.tetroe.com' class="itemSmall itemlink">
+            <div class="rotated">Gamsu</div>
+        </a>
+        <div class="item">
+            <div class="imgdescrip">Track games you play using a 3 point rating scale.</div>
+            <img src="./GamsuRating.png" class="displayimg">
+        </div>
+        <div class="item">
+            <div class="imgdescrip">Rank games your Top 5 picks of each year.</div>
+            <img src="./gamsuTop5.png" class="displayimg">
+        </div>
+        <div class="item">
+            <div class="imgdescrip">Explore your genre preferences.</div>
+            <img src="./gamsuGamerWheel.png" class="displayimg">
+        </div>
+        <div class="item">
+            <div class="imgdescrip">Follow friends to share and compare gaming profiles.</div>
+            <img src="./gamsuGameSocial.png" class="displayimg">
+        </div>
+        <div class="item">
+            
+            <a href='https://gamsu.tetroe.com'>
+                <div>Gamsu</div>
+                <div>Check it out >></div>
+            </a>
         </div>
     </div>
-<hr>
-    <div id="content">
-       <div class="products">
-            <center><a href="https://gamsu.tetroe.com" class="gamsu">Gamsu</a></center>
-            <div class="producttext">Rate gaming preferences on a 3 point scale and create yearly top 5 lists. Share and compare your profile with friends. </div>
-        </div>
-        <div class="products">
-            <center><a href="https://cardstocks.tetroe.com" class="cardstocks">cardStocks</a></center>
-            <div class="producttext">Manager your pokemon card collections with user defined rules to refine the sets to your interests.</div>
-        </div>
-        <div class="products">
-            <center><a href="https://store.tetroe.com" class="store">Store</a></center>
-            <div class="producttext">Check out our pokemon card store to purchase sealed products to fill your in your missing collections.</div>
-        </div>
+<hr/>
+<div class="container">
+    <div class="item">
+        <img src="./cardStockDalle.png" class="displayimg">
     </div>
+    <a href='https://cardstocks.tetroe.com' class="itemSmall itemlink">
+        <div class="rotated">cardStocks</div>
+    </a>
+    <div class="item">
+        <div class="imgdescrip">Create groups to manage different card collections </div>
+        <img src="./CSCollection.png" class="displayimg">
+    </div>
+    <div class="item">
+        <div class="imgdescrip">Apply rules on collections to filter out cards that are not of interest.</div>
+        <img src="./CSsets.png" class="displayimg">
+    </div>
+
+    <div class="item">
+        <a href='https://cardstocks.tetroe.com'>
+            <div>cardStocks</div>
+            <div>Check it out >></div>
+        </a>
+    </div>
+</div>
+
+
+<hr/>
+
+Initial images generated with <a href="https://openai.com/dall-e-2/">Dall-e 2</a>.
+
+
 </body>
 
 </html>
