update page layout

--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
 </head>
 
 <body>
- 
-    <div class="container">
-        <div class="item">
-            <img src="./gamsuDalle.png" class="displayimg">
-        </div>
-        <a href='https://gamsu.tetroe.com' class="itemSmall itemlink">
-            <div class="rotated">Gamsu</div>
-        </a>
+    <header>
+        Tetroe
+    </header>
+ <hr>
+ <div class="product">
+    <div class="halfdisplay">
+        <a href='https://gamsu.tetroe.com' class="gamsu">Gamsu</a>
+    </div>
+
+    <div class="halfdisplay">
+        <img src="./gamsuDalle.png" class="displayimgheader">
+    </div>
+
+
+    <div class="containerslide">
         <div class="item">
             <div class="imgdescrip">Track games you play using a 3 point rating scale.</div>
             <img src="./GamsuRating.png" class="displayimg">
@@ -29,35 +36,40 @@
             <img src="./gamsuGameSocial.png" class="displayimg">
         </div>
         <div class="item">
-            
             <a href='https://gamsu.tetroe.com'>
                 <div>Gamsu</div>
                 <div>Check it out >></div>
             </a>
         </div>
     </div>
-<hr/>
-<div class="container">
-    <div class="item">
-        <img src="./cardStockDalle.png" class="displayimg">
-    </div>
-    <a href='https://cardstocks.tetroe.com' class="itemSmall itemlink">
-        <div class="rotated">cardStocks</div>
-    </a>
-    <div class="item">
-        <div class="imgdescrip">Create groups to manage different card collections </div>
-        <img src="./CSCollection.png" class="displayimg">
-    </div>
-    <div class="item">
-        <div class="imgdescrip">Apply rules on collections to filter out cards that are not of interest.</div>
-        <img src="./CSsets.png" class="displayimg">
+</div>
+
+<hr>
+
+<div class="product">
+    <div class="halfdisplay">
+        <a href='https://cardstocks.tetroe.com' class="cardstocks">cardStocks</a>
     </div>
 
-    <div class="item">
-        <a href='https://cardstocks.tetroe.com'>
-            <div>cardStocks</div>
-            <div>Check it out >></div>
-        </a>
+    <div class="halfdisplay">
+        <img src="./cardStockDalle.png" class="displayimg">
+    </div>
+    <div class="containerslide">
+        <div class="item">
+            <div class="imgdescrip">Create groups to manage different card collections </div>
+            <img src="./CSCollection.png" class="displayimg">
+        </div>
+        <div class="item">
+            <div class="imgdescrip">Apply rules on collections to filter out cards that are not of interest.</div>
+            <img src="./CSsets.png" class="displayimg">
+        </div>
+
+        <div class="item">
+            <a href='https://cardstocks.tetroe.com'>
+                <div>cardStocks</div>
+                <div>Check it out >></div>
+            </a>
+        </div>
     </div>
 </div>
 
