update image source to azure blob

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
     </div>
 
     <div class="halfdisplay">
-        <img src="./gamsuDalle.png" class="displayimgheader">
+        <img src="https://card.blob.core.windows.net/tetroe/gamsuDalle.png" class="displayimgheader">
     </div>
 
 
     <div class="containerslide">
         <div class="item">
             <div class="imgdescrip">Track games you play using a 3 point rating scale.</div>
-            <img src="./GamsuRating.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/GamsuRating.png" class="displayimg">
         </div>
         <div class="item">
             <div class="imgdescrip">Rank games your Top 5 picks of each year.</div>
-            <img src="./gamsuTop5.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/gamsuTop5.png" class="displayimg">
         </div>
         <div class="item">
             <div class="imgdescrip">Explore your genre preferences.</div>
-            <img src="./gamsuGamerWheel.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/gamsuGamerWheel.png" class="displayimg">
         </div>
         <div class="item">
             <div class="imgdescrip">Follow friends to share and compare gaming profiles.</div>
-            <img src="./gamsuGameSocial.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/gamsuGameSocial.png" class="displayimg">
         </div>
         <div class="item">
             <a href='https://gamsu.tetroe.com'>
@@ -52,16 +52,16 @@
     </div>
 
     <div class="halfdisplay">
-        <img src="./cardStockDalle.png" class="displayimg">
+        <img src="https://card.blob.core.windows.net/tetroe/cardStockDalle.png" class="displayimg">
     </div>
     <div class="containerslide">
         <div class="item">
             <div class="imgdescrip">Create groups to manage different card collections </div>
-            <img src="./CSCollection.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/CSCollection.png" class="displayimg">
         </div>
         <div class="item">
             <div class="imgdescrip">Apply rules on collections to filter out cards that are not of interest.</div>
-            <img src="./CSsets.png" class="displayimg">
+            <img src="https://card.blob.core.windows.net/tetroe/CSsets.png" class="displayimg">
         </div>
 
         <div class="item">
