shift to banner image style

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 <html>
 <head>
     <link rel="stylesheet" href="./style.css">
@@ -5,80 +7,21 @@
 
 <body>
     <header>
-        Tetroe
+    <div class="headerbox">
+        <div class="headerinfo">
+            <div class="headerimg"><img src="https://card.blob.core.windows.net/tetroe/logo v1_square.png" class="logo"/></div>
+            <div class="headertext">TETROE</div>
+        </div>
+    </div>
     </header>
- <hr>
- <div class="product">
-    <div class="halfdisplay">
-        <a href='https://gamsu.tetroe.com' class="gamsu">Gamsu</a>
-    </div>
-
-    <div class="halfdisplay">
-        <img src="https://card.blob.core.windows.net/tetroe/gamsuDalle.png" class="displayimgheader">
-    </div>
-
-
-    <div class="containerslide">
-        <div class="item">
-            <div class="imgdescrip">Track games you play using a 3 point rating scale.</div>
-            <img src="https://card.blob.core.windows.net/tetroe/GamsuRating.png" class="displayimg">
-        </div>
-        <div class="item">
-            <div class="imgdescrip">Rank games your Top 5 picks of each year.</div>
-            <img src="https://card.blob.core.windows.net/tetroe/gamsuTop5.png" class="displayimg">
-        </div>
-        <div class="item">
-            <div class="imgdescrip">Explore your genre preferences.</div>
-            <img src="https://card.blob.core.windows.net/tetroe/gamsuGamerWheel.png" class="displayimg">
-        </div>
-        <div class="item">
-            <div class="imgdescrip">Follow friends to share and compare gaming profiles.</div>
-            <img src="https://card.blob.core.windows.net/tetroe/gamsuGameSocial.png" class="displayimg">
-        </div>
-        <div class="item">
-            <a href='https://gamsu.tetroe.com'>
-                <div>Gamsu</div>
-                <div>Check it out >></div>
-            </a>
+    
+    <div class="main">
+        <div class="row w-100">
+            <div class="col-sm-12 col-md-4 banner"><img src="./wave1.png" class="bannerimg"/></div>
+            <div class="col-sm-12 col-md-4 banner"><img src="./wave2.png" class="bannerimg" /></div>
+            <div class="col-sm-12 col-md-4 banner"><img src="./wave3.png" class="bannerimg" /></div>
         </div>
     </div>
-</div>
-
-<hr>
-
-<div class="product">
-    <div class="halfdisplay">
-        <a href='https://cardstocks.tetroe.com' class="cardstocks">cardStocks</a>
-    </div>
-
-    <div class="halfdisplay">
-        <img src="https://card.blob.core.windows.net/tetroe/cardStockDalle.png" class="displayimg">
-    </div>
-    <div class="containerslide">
-        <div class="item">
-            <div class="imgdescrip">Create groups to manage different card collections </div>
-            <img src="https://card.blob.core.windows.net/tetroe/CSCollection.png" class="displayimg">
-        </div>
-        <div class="item">
-            <div class="imgdescrip">Apply rules on collections to filter out cards that are not of interest.</div>
-            <img src="https://card.blob.core.windows.net/tetroe/CSsets.png" class="displayimg">
-        </div>
-
-        <div class="item">
-            <a href='https://cardstocks.tetroe.com'>
-                <div>cardStocks</div>
-                <div>Check it out >></div>
-            </a>
-        </div>
-    </div>
-</div>
-
-
-<hr/>
-
-Initial images generated with <a href="https://openai.com/dall-e-2/">Dall-e 2</a>.
-
-
 </body>
 
 </html>
