--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         </div>
     </div>
     </header>
-    
+    <div><a href="https://gamsu.tetroe.com">Gamsu</a></div>
+    <div><a href="https://cardstocks.tetroe.com">cardStocks</a></div>
+    <div><a href="https://shop.tetroe.com">Shop</a></div>
     <div class="main">
         <div class="row w-100">
             <div class="col-sm-12 col-md-4 banner"><img src="./wave1.png" class="bannerimg"/></div>
