update media check without bootstrap

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <div><a href="https://cardstocks.tetroe.com">cardStocks</a></div>
     <div><a href="https://shop.tetroe.com">Shop</a></div>
     <div class="main">
-        <div class="row w-100">
-            <div class="col-sm-12 col-md-4 banner"><img src="./wave1.png" class="bannerimg"/></div>
-            <div class="col-sm-12 col-md-4 banner"><img src="./wave2.png" class="bannerimg" /></div>
-            <div class="col-sm-12 col-md-4 banner"><img src="./wave3.png" class="bannerimg" /></div>
-        </div>
+            <div class="banner"><img src="./wave1.png" class="bannerimg"/></div>
+            <div class="banner"><img src="./wave2.png" class="bannerimg" /></div>
+            <div class="banner"><img src="./wave3.png" class="bannerimg" /></div>
     </div>
 </body>
 
 </html>
+
