--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
     <link rel="stylesheet" href="./style.css">
 </head>
-
 <body>
     <header>
     <div class="headerbox">
@@ -12,15 +11,11 @@
         </div>
     </div>
     </header>
-    <div><a href="https://gamsu.tetroe.com">Gamsu</a></div>
-    <div><a href="https://cardstocks.tetroe.com">cardStocks</a></div>
-    <div><a href="https://shop.tetroe.com">Shop</a></div>
     <div class="main">
-            <div class="banner"><img src="./wave1.png" class="bannerimg"/></div>
-            <div class="banner"><img src="./wave2.png" class="bannerimg" /></div>
-            <div class="banner"><img src="./wave3.png" class="bannerimg" /></div>
+            <a class="banner" href="https://gamsu.tetroe.com"><img src="./tetroe-panel-01.png" class="bannerimg"/></a>
+            <a class="banner" href="https://cardstocks.tetroe.com"><img src="./tetroe-panel-02.png" class="bannerimg" /></a>
+            <a class="banner" href="https://shop.tetroe.com"><img src="./tetroe-panel-03.png" class="bannerimg" /></a>
     </div>
 </body>
-
 </html>
 
