dark background to match banner image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <header>
     <div class="headerbox">
         <div class="headerinfo">
-            <div class="headerimg"><img src="https://card.blob.core.windows.net/tetroe/logo v1_square.png" class="logo"/></div>
+            <div class="headerimg"><img src="https://card.blob.core.windows.net/tetroe/logo v1_square_bl_tran.png" class="logo"/></div>
             <div class="headertext">TETROE</div>
         </div>
     </div>
